/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-05-01 21:10 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - nice2.hbp
   - nice2.prg
   * demonice.prg
     ! added on demonice.prg the button of nice2.prg
   * demoget1.prg
     ! my mistake when update positions
     ! size on GTK is for one line, size on windows is for the list
     ! reported by Itamar Lins

2025-05-01 19:15 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/nice2.prg
     ! only reference to demonice.prg
   - samples/nice.hbp
   * samples/Readme.txt
   * samples/demoall.hbp
   * samples/demoall.prg
   * samples/demonice.prg renamed from nice.prg
     ! Nice button works on dialog if created on INIT
     ! if added to tabpage, it assumes handle of tab, not tabpage
     ! it is allways visible on all tabpages
     ! Added as dialog on demoall
     ! Comment: source code of nicebutton is a codeblock now,
     !       added on dialog init

2025-05-01 18:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * source/herrsys.prg
     ! add value list
     !
     ! error message, after to change errorsys
     !
     ! Error BASE/1070  Argument error: ==
     ! Called from (b)HWG_ERRSYS(20)
     ! Called from (b)HWG_FINDPARENT(542)
     ! Called from ASCAN(0)
     ! Called from HWG_FINDPARENT(542)
     ! Called from HWG_FINDSELF(561)
     ! Called from HWG_NICEBUTTPROC(134)
     ! Called from HWG_DLGBOXINDIRECT(0)
     ! Called from HDIALOG:ACTIVATE(176)
     ! Called from MAIN(64)
     ! (1) = Type: N Value: 0
     ! (2) = Type: P Value: <pointer>
     !
     ! Last lines show values that cause error
     ! without to need debug routines

2025-05-01 16:55 UTC-0300 Itamar M. Lins Jr. itamarlins-gmail.com